--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,103 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-* {
+*{
+  list-style: none;
   box-sizing: border-box;
+  list-style: none;
 }
+  @layer utilities{
+
+    .mytable{
+      @apply justify-center table-column m-auto;
+    } 
+    .mytable .t_head tr th {
+      @apply  border-indigo-600 w-52 h-8;
+    } 
+    .mytable tbody td{
+      @apply border-gray-500 w-52 h-8 text-center;
+    }
+
+
+    /* table th {
+      border: 1px solid gray;
+      width: 200px;
+      height: 30px;
+    } */
+    /* tbody td {
+      border: 1px solid gray;
+      width: 200px;
+      height: 30px;
+      text-align: center;
+    } */
+    .myinput{
+      @apply justify-center table-column m-auto;
+    }
+    .myinput .save-btn{
+      @apply justify-center flex mt-5;
+    }
+    .myinput .save-btn button{
+      @apply mt-3;
+    }
+    .navigation{
+      @apply flex
+    }
+    .navigation h1{
+      @apply flex justify-center w-80
+    }
+    .navigation ul{
+      @apply w-2/4
+    }
+    .navigation ul li a{
+      @apply ml-8 float-left
+    }
+    .footer{
+      @apply flex justify-center
+    }
+
+    /* .button{
+      margin-top: 10px;
+    } */
+    /* .save-btn{
+      justify-content: center;
+      display: flex;
+      margin-top: 20px;
+    } */
+
+    /* .myinput{
+      justify-content: center;
+        display: table;
+        margin: auto;
+    } */
+    /* .footer{
+      justify-content: center;
+        display: flex;
+        margin-top: 20px;
+    }
+    .heading h1{
+      display: flex;
+      justify-content: center;
+    } */
+    /* .navigation{
+      display: flex;
+    } */
+    /* .navigation h1{
+      width: 300px;
+      display: flex;
+      justify-content: center;
+    } */
+    /* .navigation ul{
+      width: 800px;
+    } */
+    /* .navigation li a{
+      float: left;
+      
+      
+    }
+    .navigation a{
+      padding-left: 2rem;
+    } */
+ 
+  }
